--- a/investigation.html
+++ b/investigation.html
@@ -368,6 +368,9 @@ creating your presentation and report easier. Please note that you
 project.</p>
 <pre class="r"><code>library(tidyverse)
 library(readxl)
+library(janitor)
+library(ggplot2)
+library(lubridate)
 # Add any other libraries here</code></pre>
 <pre class="r"><code># load your data 
 data &lt;- read_excel(&quot;data/criminal age dataset.xlsx&quot;)</code></pre>
