--- a/investigation.html
+++ b/investigation.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="by Workshop 10: Euan McKerron, Yujun Ling, Akshit Wadhawan &amp; Ariane Baillie" />
 
-<meta name="date" content="2025-11-21" />
+<meta name="date" content="2025-11-25" />
 
 <title>IDS investigation worksheet</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">IDS investigation worksheet</h1>
 <h4 class="author">by Workshop 10: Euan McKerron, Yujun Ling, Akshit
 Wadhawan &amp; Ariane Baillie</h4>
-<h4 class="date">2025-11-21</h4>
+<h4 class="date">2025-11-25</h4>
 
 </div>
 
@@ -375,6 +375,7 @@ library(zoo)
 library(scales)
 library(dplyr)
 library(tidymodels)
+library(yardstick)
 # Add any other libraries here</code></pre>
 <pre class="r"><code># load your data 
 data &lt;- read_excel(&quot;data/criminal age dataset.xlsx&quot;)</code></pre>
