Changed the title details

--- a/presentation.html
+++ b/presentation.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>presentation.knit</title>
+    <title>Investigating the Predictors of Violent Crime</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Team name   Names of team members" />
-    <meta name="date" content="2025-11-26" />
+    <meta name="author" content="Workshop 10   Euan McKerron, Yujun Ling, Akshit Wadhawan &amp; Ariane Baillie" />
+    <meta name="date" content="2025-11-27" />
     <script src="libs/header-attrs-2.29/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
+class: center, middle, inverse, title-slide
+
+.title[
+# Investigating the Predictors of Violent Crime
+]
+.author[
+### Workshop 10 <br> Euan McKerron, Yujun Ling, Akshit Wadhawan &amp; Ariane Baillie
+]
+.institute[
+### University of Edinburgh
+]
+.date[
+### 2025-11-27
+]
+
+---
 
 
 
