--- a/presentation.html
+++ b/presentation.html
@@ -39,39 +39,36 @@ class: center, middle, inverse, title-slide
 
 
 
-## A statement of the overall goal / research question
+
+# Introduction
+
+- Writing about research question and the variables in both the raw and cleaned dataset
+
+--
+
+- Show table of description of variables used in clean data
 
 ---
 
-class: inverse, center, middle
+#Exploratory statistics
 
-# Section title
-
----
-
-# Hello World
-
-- Click the `Knit` button to compile your presentation
-
-- Make sure to commit and push all resulting files to your GitHub repo
+- Write about what the statistics suggests about offence type being influenced by variables, and which variables show a strong influence
 
 ---
 
 class: inverse, middle, center
 
-# Using xaringan
+# Initial Exploration and Data Visualisations
 
 ---
 
-# xaringan
-
-- The presentation is created using the `xaringan` package
+# Graphs
 
 - Use `---` to separate slides and `--` for incremental builds
 
 --
 
-- Like this
+- (describe what each bar plot shows in terms of changing proportion of violent to non-violent crimes, because sex doesnt have any change say why we discount it going forward in the investigation)
 
 ---
 
@@ -95,53 +92,21 @@ or text in two columns `\(^*\)`
 
 ---
 
-# Code
-
-
-``` r
-# a boring regression
-model &lt;- lm(dist ~ speed, data = cars)
-tidy(model)
-```
-
-```
-## # A tibble: 2 × 5
-##   term        estimate std.error statistic  p.value
-##   &lt;chr&gt;          &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt;
-## 1 (Intercept)   -17.6      6.76      -2.60 1.23e- 2
-## 2 speed           3.93     0.416      9.46 1.49e-12
-```
-
-``` r
-glance(model)
-```
-
-```
-## # A tibble: 1 × 12
-##   r.squared adj.r.squared sigma statistic  p.value    df logLik   AIC   BIC
-##       &lt;dbl&gt;         &lt;dbl&gt; &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt; &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
-## 1     0.651         0.644  15.4      89.6 1.49e-12     1  -207.  419.  425.
-## # ℹ 3 more variables: deviance &lt;dbl&gt;, df.residual &lt;int&gt;, nobs &lt;int&gt;
-```
-
----
-
-# Plots
-
-
-
-&lt;img src="presentation_files/figure-html/plot-iris-1.png" width="80%" /&gt;
-
----
-
-## Plot and text
+# Code/ table example
 
 .pull-left[
 - Some text
 - goes here
 ]
 .pull-right[
-&lt;img src="presentation_files/figure-html/unnamed-chunk-2-1.png" width="100%" /&gt;
+
+```
+## # A tibble: 2 × 3
+##   offence_type     M     F
+##   &lt;fct&gt;        &lt;dbl&gt; &lt;dbl&gt;
+## 1 Non-Violent  29618  1347
+## 2 Violent       6297   290
+```
 ]
 
 ---
@@ -245,16 +210,25 @@ Limitations:
 
 ---
 
-# Feeling adventurous?
+class: inverse, middle, center
 
-- Want to find out more about `xaringan`? See https://slides.yihui.name/xaringan/#1.
+# Modelling and Model Evaluation
 
-- You are welcome to use the default styling of the slides. In fact, that's what I expect majority of you will do. You will differentiate yourself with the content of your presentation.
+---
 
-- But some of you might want to play around with slide styling. The 
-`xaringanthemer` provides some solutions for this that: https://pkg.garrickadenbuie.com/xaringanthemer.
+# Add stuff to do with model here
 
-- And if you want more bells and whistles, there is also `xaringanExtra`: https://pkg.garrickadenbuie.com/xaringanExtra.
+---
+
+class: inverse, middle, center
+
+# Conclusion
+
+---
+
+# Conclusion
+
+- (add reference at bottom)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
