Edited some slides and moved slides around

--- a/presentation.html
+++ b/presentation.html
@@ -60,19 +60,6 @@ class: center, middle, inverse, title-slide
 These variables allow us to explore how age, sex, offence type, location, and sentence length relate to violent crime. Using official government data ensures the analysis is reliable and nationally representative.
 ---
 
-#Exploratory statistics
-
-The statistics suggest that offence type is influenced by several key variables:
-- Age, this shows a strong effect, with younger offenders more likely to be involved in certain violent or high-risk offences, while older groups tend to appear more often in less impulsive or lower-severity categories. 
-
-- Sex, this doesn’t seem to be major predictor, although overall males committed more crimes but the rate of violent versus non-violent is around the same. 
-
-- Together, these variables indicate that offence type is not random but closely linked to demographic and contextual factors, with age showing the strongest influence in the data.
-
-Write about what the statistics suggests about offence type being influenced by variables, and which variables show a strong influence
-
----
-
 class: inverse, middle, center
 
 # Initial Exploration and Data Visualisations
@@ -107,7 +94,32 @@ As you can see in this count plot it is clear that with the exception of youth i
 ```
 
 This table highlights the disparity in the amount of time each age groups are spending in these establishments ]
+
 ---
+
+#Exploratory statistics
+
+The statistics suggest that offence type is influenced by several key variables:
+
+--
+
+- Age, this shows a strong effect, with younger offenders more likely to be involved in certain violent or high-risk offences, while older groups tend to appear more often in less impulsive or lower-severity categories. 
+
+--
+
+- Establishment type, also shows a strong effect with the sites geared towards young offenders being more likely to commit violent crime and the lower-security sites showing a lower rate of violent crime. This variable is also linked with age as some of the sites that an offender is placed in are dependent on the age of the offender.
+
+--
+
+- Sex, this doesn’t seem to be major predictor, although overall males committed more crimes but the rate of violent versus non-violent is around the same. 
+
+--
+
+Together, these variables indicate that offence type is not random but closely linked to demographic and contextual factors, with age and establishment type showing the strongest influence in the data.
+
+
+---
+
 #Number of prisoners by age 
 .pull-left[ 
 &lt;img src="presentation_files/figure-html/unnamed-chunk-5-1.png" width="80%" /&gt;
