--- a/presentation.html
+++ b/presentation.html
@@ -42,7 +42,7 @@ class: center, middle, inverse, title-slide
 
 # Introduction
 
-- This project looks at how different factors like age, sex, and location might influence the kinds of offences people commit and the sentences they receive. By looking at the patterns in the data, we can get a sense of whether these factors might actually help us predict future crime trends, and how their influence seems to shift over time.
+This project looks at how different factors like age, sex, and location might influence the kinds of offences people commit and the sentences they receive. By looking at the patterns in the data, we can get a sense of whether these factors might actually help us predict future crime trends, and how their influence seems to shift over time.
 
 ---
 
@@ -63,6 +63,21 @@ These variables allow us to explore how age, sex, offence type, location, and se
 class: inverse, middle, center
 
 # Initial Exploration and Data Visualisations
+
+---
+
+class: middle
+
+.pull-left[
+&lt;img src="presentation_files/figure-html/bar-plots-sex-1.png" width="80%" /&gt;
+
+&lt;img src="presentation_files/figure-html/bar-plots-age-1.png" width="80%" /&gt;
+]
+.pull-right[
+&lt;img src="presentation_files/figure-html/bar-plots-est-1.png" width="80%" /&gt;
+
+These graphs show how the proportion of violent to non-violent crime changes based on the independent variables of the dataset. Based on the first graph, sex doesn't seem to be a predictor due to there being no change between male and female offenders. Establishment type and age groups appear to have an effect on the proportion so can be investigated later on in the model as predictors.
+]
 
 ---
 
