--- a/presentation.html
+++ b/presentation.html
@@ -48,11 +48,11 @@ class: center, middle, inverse, title-slide
 --
 
 
-- This project looks at how different factors like age, sex, and establishment type might influence the kinds of offences people commit. 
+- This project looks at how different factors like age, sex, and establishment type influence whether offenders commit violent or non-violent crimes. 
 
 --
 
-- By looking at the patterns in the data, we can get a sense of whether these factors might actually help us predict future crime trends, and how their influence seems to shift over time.
+- By looking at the patterns in the data, we can get a sense of whether these factors might help us predict trends within prison populations.
 
 ---
 
@@ -356,15 +356,16 @@ class: middle
 
 ---
 
-class: inverse, middle, center
 
 # Conclusion
 
+This project demonstrates that age group and establishment type influences whether a crime an offender commits is violent or non-violent.
 ---
 
 # References
 
-- Offender Management Statistics Quarterly: January to March 2023. Ministry of Justice, 2023. https://www.gov.uk/government/statistics/offender-management-statistics-quarterly-january-to-march-2023
+- Offender Management Statistics Quarterly: January to March 2023. (2023). Ministry of Justice, HM Prison and Probation Service.
+https://www.gov.uk/government/statistics/offender-management-statistics-quarterly-january-to-march-2023
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
